<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:id="@+id/textTitle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_fragment1"
        android:id="@+id/btnNavFrag1"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_fragment2"
        android:id="@+id/btnNavFrag2"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/colorAccent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_fragment3"
        android:id="@+id/btnNavFrag3"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_fragment4"
        android:id="@+id/btnNavFrag4"
        android:layout_marginTop="10dp"/>

</LinearLayout>